--- a/docs/scss/_timeline.scss
+++ b/docs/scss/_timeline.scss
@@ -8,6 +8,7 @@
       @include media-breakpoint-down(xs) { 
         white-space: normal;
         height:auto;
+        padding-left:23px;
        }
 	}
 	.timeline_location{
